# gaiwan

./: .gitignore  README.md  config.py  config.template.json  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_automation.py  setup.cfg  setup.py
gaiwan/: .gitignore  __init__.py  analyze_archive.py  archive_processor.py  config.py  conversation_analyzer.py  dl_archive.py  mixpr.py  models.py  schema_generator.py  stats_collector.py  twitter_archive_schema.py  user_similarity.py
src/gaiwan/: README.md  TODO.md  __init__.py  analyze.py  archive_schema.json  canonicalize.py  community_archive_schema.json  community_archiver.py  config.py  consolidate_tweets.py  inspect_output.py  schema_generator.py  simpler.py  thread_builder.py  twitter_archive_schema.py  url_analyzer.py  verify_consolidation.py
src/gaiwan/Schema Inspection/: archive_schema.json  inspect_account.py  inspect_json.py  inspect_likes.py  inspect_parquet.py
src/gaiwan/automation/: config.py  folder_partitioner.py  folder_splitter.py  process_manager.py  resource_monitor.py
src/gaiwan/twitter_archive_processor/: README.md  __init__.py  __main__.py  archive.py  common.py  conversation.py  coretypes.py  export.py  extraction.py  main.py  metadata.py  models.py  processor.py  transformation.py  tweet.py  url_analyzer.py  utilities.py
src/gaiwan/twitter_archive_processor/core/: __init__.py  archive.py  conversation.py  processor.py
src/gaiwan/twitter_archive_processor/export/: README.md  __init__.py  base.py  chatml.py  jsonl.py  markdown.py  oai.py
src/gaiwan/twitter_archive_processor/identity/: README.md  __init__.py  manager.py  models.py  tracker.py
src/gaiwan/twitter_archive_processor/tests/: conftest.py  test_archive.py  test_conversation.py  test_export.py  test_main.py  test_processor.py
src/gaiwan/twitter_archive_processor/tests/export/: test_chatml.py  test_oai.py
src/gaiwan/twitter_archive_processor/tests/tweets/: test_types.py
src/gaiwan/twitter_archive_processor/tests/url_analysis/: test_analyzer.py  test_cli.py  test_content.py  test_domain.py  test_utils.py
src/gaiwan/twitter_archive_processor/tweets/: README.md  base.py  factory.py  note.py  standard.py  types.py
src/gaiwan/twitter_archive_processor/url_analysis/: README.md  __init__.py  analyzer.py  cli.py  content.py  domain.py  metadata.py  models.py
src/gaiwan/twitter_archive_processor/url_analysis/apis/: apiconfig.py  config.py  github.py  instagram.py  twitter.py  youtube.py
tests/: __init__.py  conftest.py  test_archive.py  test_archive_processor.py  test_canonicalize.py  test_community_archiver.py  test_downloader.py  test_e2e_visakanv.py  test_integration.py  test_main.py  test_merge_archives.py  test_mixpr.py  test_models.py  test_processor.py  test_schema.py  test_stats_collector.py  test_user_similarity.py
tests/export/: test_chatml.py  test_markdown.py
tests/fixtures/: brentbaum_archive.json
tests/test_core/: test_archive.py
tests/test_tweets/test_types/: test_note.py
tests/test_user_identity/: conftest.py  test_user_identity.py
tests/test_utils/: test_rate_limiter.py
tests/tweets/: test_factory.py  test_types.py
tests/url_analysis/: test_analyzer.py  test_cli.py  test_content.py  test_metadata.py
twitter_archive_processor/: coretypes.py  export.py  extraction.py  main.py  transformation.py  utilities.py
