[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaiwan"
version = "0.1.0"
description = "Community archive analysis tools"
requires-python = ">=3.7"
dependencies = [
    "orjson",
    "numpy",
    "scipy",
    "scikit-learn",
    "requests>=2.31.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-timeout>=2.1.0",
]

[tool.pylint.messages_control]
disable = [
    "C0303",  # trailing-whitespace
    "C0301",  # line-too-long
    "W0718",  # broad-exception-caught
]

[tool.pylint.format]
max-line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=gaiwan --cov-report=term-missing"

[tool.coverage.run]
source = ["gaiwan"]
omit = ["tests/*"]

[tool.pytest.ini_options]
markers = [
    "slow: mark test as slow running",
    "timeout: mark test to timeout after X seconds"
]