[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaiwan"
version = "0.1"
description = "Twitter archive tools"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "pandas",
    "tqdm",
    "orjson",
    "pytest",
    "urllib3",
    "jsonschema",
    "beautifulsoup4",
    "aiohttp",
    "ratelimit",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "flake8",
]

[tool.pylint.messages_control]
disable = [
    "C0303",  # trailing-whitespace
    "C0301",  # line-too-long
    "W0718",  # broad-exception-caught
]

[tool.pylint.format]
max-line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=gaiwan --cov-report=term-missing"

[tool.coverage.run]
source = ["gaiwan"]
omit = ["tests/*"]

[tool.pytest.ini_options]
markers = [
    "slow: mark test as slow running",
    "timeout: mark test to timeout after X seconds"
]