[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaiwan"
version = "0.1.0"
description = "Twitter Archive Processing Framework"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "requests",
    "aiohttp",
    "beautifulsoup4",
    "tqdm",
    "orjson",
    "aiofiles"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pytest-asyncio",
    "flake8",
]

youtube = ["google-api-python-client"]

[tool.pylint.messages_control]
disable = [
    "C0303",  # trailing-whitespace
    "C0301",  # line-too-long
    "W0718",  # broad-exception-caught
]

[tool.pylint.format]
max-line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"
pythonpath = ["src"]

[tool.coverage.run]
source = ["gaiwan"]
omit = ["tests/*"]

[tool.pytest.ini_options]
markers = [
    "slow: mark test as slow running",
    "timeout: mark test to timeout after X seconds"
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools]
packages = ["gaiwan"]
package-dir = {"" = "src"}